force-app/main/default/objects/NewsArticle__c/NewsArticle__c.object-meta.xml
<CustomObject>
    <label>NewsArticle</label>
    <nameField>
        <label>NewsArticle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewsArticles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>