force-app/main/default/objects/NewsArticle__c/fields/urlToImage__c.field-meta.xml
<CustomField>
    <fullName>urlToImage__c</fullName>
    <label>urlToImage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>