force-app/main/default/objects/NewsArticle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>author__c</columns>
    <columns>title__c</columns>
    <columns>url__c</columns>
    <columns>description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>