force-app/main/default/objects/NewsArticle__c/listViews/Today_s_Articles.listView-meta.xml
<ListView>
    <fullName>Today_s_Articles</fullName>
    <columns>title__c</columns>
    <columns>url__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:1</value>
    </filters>
    <label>Today&#39;s Articles</label>
</ListView>